--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -1867,6 +1867,11 @@ fieldset:disabled a.btn {
     .show > .btn-secondary.dropdown-toggle:focus {
       box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5); }
 
+    .profile_icons{
+      padding:10px;
+      margin-top: 23px;
+    }
+
 .btn-success {
   color: #fff;
   background-color: #28a745;
